{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 175,
  "lineage": "c4dea0cd-b659-6f93-2dfe-ed7179c305ea",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095535d473fce06d6",
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:elastic-ip/eipalloc-095535d473fce06d6",
            "domain": "vpc",
            "id": "eipalloc-095535d473fce06d6",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-54-116-107-185.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.116.107.185",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-eip-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-eip-natgw-main",
              "Organization": "tf-core",
              "Project": "lab03"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:internet-gateway/igw-021e54acb32d7c744",
            "id": "igw-021e54acb32d7c744",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-igw",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095535d473fce06d6",
            "association_id": "eipassoc-0be6f4fc8dad876c2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ed0e42c348dd37ea",
            "network_interface_id": "eni-039b18af127b82fab",
            "private_ip": "10.0.1.254",
            "public_ip": "54.116.107.185",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ac2f526b3579750",
            "tags": {
              "Name": "tf-core-lab03-natgw-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-natgw-main",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0bded460e5dce9532",
            "id": "rtb-0bded460e5dce9532",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed0e42c348dd37ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-rtb-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-rtb-private-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0bded460e5dce9532",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-095d65b90f4515f49",
            "id": "rtb-095d65b90f4515f49",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed0e42c348dd37ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-rtb-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-rtb-private-b",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-095d65b90f4515f49",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0430edc17392c34f5",
            "id": "rtb-0430edc17392c34f5",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021e54acb32d7c744",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-rtb-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-rtb-public-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0430edc17392c34f5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0c596a2b86e48afb3",
            "id": "rtb-0c596a2b86e48afb3",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021e54acb32d7c744",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-rtb-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-rtb-public-b",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0c596a2b86e48afb3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3f8e64599c63604",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0bded460e5dce9532",
            "subnet_id": "subnet-0e7eb939dc767131e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0a3f8e64599c63604",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_0",
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e7e4e82334d6d4c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-095d65b90f4515f49",
            "subnet_id": "subnet-079b440d6337ddd9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-07e7e4e82334d6d4c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_eip.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_1",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7be0bc66b3b1850",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0430edc17392c34f5",
            "subnet_id": "subnet-00ac2f526b3579750"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0b7be0bc66b3b1850",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd6c2681e21ca6b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c596a2b86e48afb3",
            "subnet_id": "subnet-09e02e63d79f82568"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-07bd6c2681e21ca6b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_1",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-0e7eb939dc767131e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7eb939dc767131e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-subnet-private-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-subnet-private-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-0e7eb939dc767131e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-079b440d6337ddd9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b440d6337ddd9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-subnet-private-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-subnet-private-b",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-079b440d6337ddd9a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-00ac2f526b3579750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ac2f526b3579750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-subnet-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-subnet-public-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-00ac2f526b3579750",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-09e02e63d79f82568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e02e63d79f82568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-subnet-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-subnet-public-b",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-09e02e63d79f82568",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:vpc/vpc-0b420f8738adbc84c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f430bcb596708de8",
            "default_route_table_id": "rtb-088105a755cdc92a2",
            "default_security_group_id": "sg-04a87c81728589a1f",
            "dhcp_options_id": "dopt-018f05c8d8ab5dc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b420f8738adbc84c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088105a755cdc92a2",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-vpc-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-vpc-main",
              "Organization": "tf-core",
              "Project": "lab03"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "vpc-0b420f8738adbc84c",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab03-lb-main/541ba39b05dc33cd",
            "arn_suffix": "app/tf-core-lab03-lb-main/541ba39b05dc33cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-core-lab03-lb-main-1322840720.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab03-lb-main/541ba39b05dc33cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-core-lab03-lb-main",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-01ce0001c7fdf3688"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ac2f526b3579750"
              },
              {
                "subnet_id": "subnet-09e02e63d79f82568"
              }
            ],
            "subnets": [
              "subnet-00ac2f526b3579750",
              "subnet-09e02e63d79f82568"
            ],
            "tags": {
              "Name": "tf-core-lab03-lb-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-lb-main",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0b420f8738adbc84c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab03-lb-main/541ba39b05dc33cd"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab03-lb-main/541ba39b05dc33cd/b5eef58819efc90c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab03-tg-main/6b25e6a7423fd3df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab03-lb-main/541ba39b05dc33cd/b5eef58819efc90c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:loadbalancer/app/tf-core-lab03-lb-main/541ba39b05dc33cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:listener/app/tf-core-lab03-lb-main/541ba39b05dc33cd/b5eef58819efc90c"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this",
            "module.platform.aws_lb.this",
            "module.platform.aws_lb_target_group.this",
            "module.platform.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab03-tg-main/6b25e6a7423fd3df",
            "arn_suffix": "targetgroup/tf-core-lab03-tg-main/6b25e6a7423fd3df",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab03-tg-main/6b25e6a7423fd3df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-core-lab03-tg-main",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-tg-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-tg-main",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:865509656639:targetgroup/tf-core-lab03-tg-main/6b25e6a7423fd3df"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:security-group/sg-01ce0001c7fdf3688",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ce0001c7fdf3688",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-core-lab03-sg-lb-main",
            "name_prefix": "",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-core-lab03-sg-lb-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-sg-lb-main",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b420f8738adbc84c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "sg-01ce0001c7fdf3688",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_subnet.private_0",
            "module.network.aws_subnet.private_1",
            "module.network.aws_subnet.public_0",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}